src/component-library/globals/_reset.module.scss
*,
*::before,
*::after {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
li {
  margin: 0;
}

strong {
  font-weight: 700;
}

